# ffmpegexamples

./: README.md
books/: readme.md
doc/: ffmpeg结构体.md  readme.md  结构体.docx
examples/audio/: CMakeLists.txt  audioGetMetadata.cpp  audioGetWaveForm.cpp  audioPCMTOMP3.cpp  readme.md
examples/video/: CMakeLists.txt  getVideoMetadata.cpp  readme.md  videoDecodeSaveYUV.cpp  videoGetAudioAAC.cpp  videoGetAudioMP3.cpp  videoGetFrame.cpp  videoGetKeyFrame.cpp  videoResolution.cpp  videoTranscode.cpp
